@@ -36,7 +36,6 @@ option(ENABLE_OVERLAYSCROLLBARS "Enable support for overlay style scrollbars whe
 option(ENABLE_CDPARANOIA "Enable CDParanoia libraries(required for AudioCD support)" ON)
 option(ENABLE_CDDB "Enable CDDB libraries(either this or MusicBrianz required for AudioCD support)" ON)
 option(ENABLE_MUSICBRAINZ "Enable MusicBrianz libraries(either this or CDDB required for AudioCD support)" ON)
-option(ENABLE_LAME "Enable LAME libraries(required for AudioCD playback support)" ON)
 option(ENABLE_PROXY_CONFIG "Enable proxy config in settings dialog" OFF)
 
 if (ENABLE_QT5)
@@ -148,9 +147,6 @@ if (ENABLE_TAGLIB)
             if (ENABLE_MUSICBRAINZ)
                 find_package(MusicBrainz5)
             endif (ENABLE_MUSICBRAINZ)
-            if (ENABLE_LAME)
-                find_package(Lame)
-            endif (ENABLE_LAME)
         endif (CDPARANOIA_FOUND)
     endif (TAGLIB_FOUND AND ENABLE_CDPARANOIA)
 endif (ENABLE_TAGLIB)
@@ -495,13 +491,9 @@ else (WIN32)
             target_link_libraries(cantata ${MUSICBRAINZ5_LIBRARIES})
             include_directories(${MUSICBRAINZ5_INCLUDE_DIR})
         endif (MUSICBRAINZ5_FOUND)
-        if (LAME_FOUND)
-            target_link_libraries(cantata ${LAME_LIBS})
-            include_directories(${LAME_INCLUDE_DIR})
-            if (ENABLE_KDE_SUPPORT)
-                install(FILES cantata-play-audiocd.desktop DESTINATION ${DATA_INSTALL_DIR}/solid/actions)
-            endif (ENABLE_KDE_SUPPORT)
-        endif (LAME_FOUND)
+        if (ENABLE_KDE_SUPPORT)
+            install(FILES cantata-play-audiocd.desktop DESTINATION ${DATA_INSTALL_DIR}/solid/actions)
+        endif (ENABLE_KDE_SUPPORT)
     endif (CDDB_FOUND OR MUSICBRAINZ5_FOUND)
 endif (WIN32)
 
@@ -584,9 +576,6 @@ if (TAGLIB_FOUND)
         endif (MTP_FOUND)
         if (CDDB_FOUND OR MUSICBRAINZ5_FOUND)
             message("        - AudioCD")
-            if (LAME_FOUND)
-              message("        - AudioCD playback via MP3")
-            endif (LAME_FOUND)
         endif (CDDB_FOUND OR MUSICBRAINZ5_FOUND)
         if (ENABLE_REMOTE_DEVICES)
             message("        - Remote device sync (EXPERIMENTAL)")
@@ -602,7 +591,7 @@ if (TAGLIB_FOUND)
         endif (ENABLE_PROXY_CONFIG)
     endif (ENABLE_REMOTE_DEVICES OR ENABLE_HTTP_STREAM_PLAYBACK OR AUDIOCD_SUPPORT OR MTP_FOUND OR ENABLE_PROXY_CONFIG OR ENABLE_REPLAYGAIN_SUPPORT)
     
-    if (NOT TAGLIB_FOUND OR NOT MTP_FOUND OR NOT AUDIOCD_SUPPORT OR NOT ENABLE_REPLAYGAIN_SUPPORT OR NOT ENABLE_HTTP_STREAM_PLAYBACK OR NOT ENABLE_REMOTE_DEVICES OR (NOT ENABLE_PROXY_CONFIG AND NOT ENABLE_KDE_SUPPORT) OR (AUDIOCD_SUPPORT AND NOT LAME_FOUND))
+    if (NOT TAGLIB_FOUND OR NOT MTP_FOUND OR NOT AUDIOCD_SUPPORT OR NOT ENABLE_REPLAYGAIN_SUPPORT OR NOT ENABLE_HTTP_STREAM_PLAYBACK OR NOT ENABLE_REMOTE_DEVICES OR (NOT ENABLE_PROXY_CONFIG AND NOT ENABLE_KDE_SUPPORT))
         message("      Disabled features:")
         if (NOT ENABLE_HTTP_STREAM_PLAYBACK)
             message("        - MPD HTTP stream playback (Phonon required for Qt4, QtMultiMedia for Qt5)")
@@ -613,9 +602,6 @@ if (TAGLIB_FOUND)
         if (NOT AUDIOCD_SUPPORT AND NOT WIN32)
             message("        - AudioCD (libcdparanoia and libcddb/libmusicbrainz5 required)")
         endif (NOT AUDIOCD_SUPPORT AND NOT WIN32)
-        if (AUDIOCD_SUPPORT AND NOT LAME_FOUND)
-            message("        - AudioCD playback via MP3 (liblame required)")
-        endif (AUDIOCD_SUPPORT AND NOT LAME_FOUND)
         if (NOT ENABLE_REMOTE_DEVICES)
             message("        - Remote device sync (EXPERIMENTAL)")
         endif (NOT ENABLE_REMOTE_DEVICES)
@@ -625,7 +611,7 @@ if (TAGLIB_FOUND)
         if (NOT ENABLE_PROXY_CONFIG AND NOT ENABLE_KDE_SUPPORT)
             message("        - Proxy configuration")
         endif (NOT ENABLE_PROXY_CONFIG AND NOT ENABLE_KDE_SUPPORT)
-    endif (NOT TAGLIB_FOUND OR NOT MTP_FOUND OR NOT AUDIOCD_SUPPORT OR NOT ENABLE_REPLAYGAIN_SUPPORT OR NOT ENABLE_HTTP_STREAM_PLAYBACK OR NOT ENABLE_REMOTE_DEVICES OR (NOT ENABLE_PROXY_CONFIG AND NOT ENABLE_KDE_SUPPORT) OR (AUDIOCD_SUPPORT AND NOT LAME_FOUND))
+    endif (NOT TAGLIB_FOUND OR NOT MTP_FOUND OR NOT AUDIOCD_SUPPORT OR NOT ENABLE_REPLAYGAIN_SUPPORT OR NOT ENABLE_HTTP_STREAM_PLAYBACK OR NOT ENABLE_REMOTE_DEVICES OR (NOT ENABLE_PROXY_CONFIG AND NOT ENABLE_KDE_SUPPORT))
 
 else (TAGLIB_FOUND)
 
